--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vista</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap');
+        @import url('https://fonts.cdnfonts.com/css/aeonik');
         body {
-            font-family: 'Inter', sans-serif;
+            font-family: 'Aeonik', sans-serif;
             background-color: black;
             color: white;
             text-align: center;
@@ -39,7 +39,9 @@
             position: absolute;
             bottom: 20px;
             display: flex;
-            gap: 15px;
+            flex-direction: row;
+            align-items: center;
+            gap: 20px;
         }
         a {
             text-decoration: none;
