--- a/index.html
+++ b/index.html
@@ -42,11 +42,16 @@
             flex-direction: row;
             align-items: center;
             gap: 20px;
+            flex-wrap: wrap;
+            justify-content: center;
+            width: 100%;
+            padding: 10px;
         }
         a {
             text-decoration: none;
             color: white;
             font-size: 1.2em;
+            white-space: nowrap;
         }
     </style>
 </head>
