fix github link on landing

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <h1>vista</h1>
     <footer>
         <a href="https://x.com/vistawtf" target="_blank">X</a>
-        <a href="https://github.com/vista-wtf" target="_blank">GitHub</a>
+        <a href="https://github.com/vistawtf" target="_blank">GitHub</a>
     </footer>
     <script>
         function createStars() {
