--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         
         <div class="about-content">
             <h2>Do you want to work with us?</h2>
-            <p>Our team has done research and data for some of the biggest projects in web3. Including Gitcoin, and independent core Ethereum research. Contact us at <span class="email">info@vista.wtf</span></p>
+            <p>Our team has done research and data for some of the biggest projects in web3. Contact us via <a href="https://t.me/entigd" target="_blank">Telegram</a></p>
         </div>
     </section>
 
