--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
         </div>
         
         <div class="about-content">
-            <h2>Do you want to work with us?</h2>
-            <p>Our team has done research and data for some of the biggest projects in web3. Contact us via <a href="https://t.me/entigd" target="_blank">Telegram</a></p>
+            <!-- <h2>Do you want to work with us?</h2> -->
+            <p><a href="mailto:info@vista.wtf" target="_blank">info@vista.wtf</a></p>
         </div>
     </section>
 
